--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vuecomponents",
+  "name": "vue-component",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -8,11 +8,9 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "@element-plus/icons-vue": "^1.1.4",
     "core-js": "^3.8.3",
-    "element-plus": "^2.1.9",
-    "vue": "^3.2.13",
-    "vue-router": "^4.0.14"
+    "node-sass": "^4.14.1",
+    "vue": "^2.6.14"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
@@ -20,14 +18,14 @@
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
-    "css-loader": "^2.0.2",
+    "element-ui": "^2.15.8",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
-    "node-sass": "^5.0.0",
     "sass": "^1.43.4",
-    "sass-loader": "^7.0.3",
-    "style-loader": "^0.23.1",
-    "style-resources-loader": "^1.4.1"
+    "sass-loader": "^7.3.1",
+    "style-resources-loader": "^1.4.1",
+    "vue-router": "^3.5.3",
+    "vue-template-compiler": "^2.6.14"
   },
   "eslintConfig": {
     "root": true,
@@ -35,7 +33,7 @@
       "node": true
     },
     "extends": [
-      "plugin:vue/vue3-essential",
+      "plugin:vue/essential",
       "eslint:recommended"
     ],
     "parserOptions": {
@@ -46,7 +44,6 @@
   "browserslist": [
     "> 1%",
     "last 2 versions",
-    "not dead",
-    "not ie 11"
+    "not dead"
   ]
 }
