--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^0.27.2",
     "core-js": "^3.8.3",
+    "moment": "^2.29.4",
     "node-sass": "^4.14.1",
     "vue": "^2.6.14",
     "vuex": "^3.6.2"
