--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.27.2",
     "core-js": "^3.8.3",
     "jquery": "^3.6.3",
+    "mockjs": "^1.1.0",
     "moment": "^2.29.4",
     "node-sass": "^4.14.1",
     "vue": "^2.6.14",
