--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "dev": "vue-cli-service serve",
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
@@ -14,6 +15,7 @@
     "mockjs": "^1.1.0",
     "moment": "^2.29.4",
     "node-sass": "^4.14.1",
+    "qiankun": "^2.10.5",
     "vue": "^2.6.14",
     "vuex": "^3.6.2"
   },
