--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "moment": "^2.29.4",
     "node-sass": "^4.14.1",
     "vue": "^2.6.14",
+    "vue-i18n": "^8.24.4",
     "vuex": "^3.6.2"
   },
   "devDependencies": {
